# NTSB_api

./: MANIFEST.in  README.md  cli.py  pyproject.toml  requirements-client.txt  requirements-server.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
app/models/: filters.py
app/server/: main.py
app/server/routes/: data.py  download.py
app/server/services/: data_processor.py  ntsb_client.py
data/: ntsb_2025_04.json
ntsb_api/: __init__.py  cli.py  client.py
ntsb_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ntsb_api/server/: main.py
tests/: temp_test.py  test_download.py  test_streaming.py
